examples/test/testpolicy10053.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10053
  namespace: namespace327
spec:
  podSelector:
    matchLabels:
      key48: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value3
      podSelector:
        matchLabels:
          key34: value37
          key9: value41
          key19: value27
